--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,27 @@
+affine==2.4.0
+attrs==25.3.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
+click==8.2.1
+click-plugins==1.1.1.2
+cligj==0.7.2
+cramjam==2.11.0
+fsspec==2025.9.0
+geopandas==1.1.1
 idna==3.10
+numpy==2.3.3
+packaging==25.0
+pandas==2.3.2
+pyarrow==21.0.0
+pyogrio==0.11.1
+pyparsing==3.2.4
+pyproj==3.7.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+rasterio==1.4.3
 requests==2.32.5
+shapely==2.1.1
+six==1.17.0
+tqdm==4.67.1
+tzdata==2025.2
 urllib3==2.5.0
